--- a/pzuo/website/style/movie.css
+++ b/pzuo/website/style/movie.css
@@ -1,15 +1,14 @@
 body {
     background-image: url("../images/background.png");
     font-size: 8pt;
-    font-family: Verdana Tahoma sans-serif;
+    font-family:  "Verdana", "Tahoma", sans-serif;
     text-align:center;
 
 }
 
 
 h1 {
-   font-family: Tahoma Verdana sans-serif;
-   font-size: 24pt;
+
    font-weight: bold;
    text-shadow: 3px 3px #999999;
    text-align: center;
@@ -34,14 +33,17 @@ h1 {
     margin:5px 5px;
     display:inline-block;
     margin-bottom:15px;
+
 }
+
+
 .commentimages {
     float:left;
     clear:right;
 }
 
 .clearleft {
-    clear:both;
+    clear:left;
 }
 /*
 image.first-child {
@@ -64,12 +66,13 @@ p.nth-child(odd) {
     display:inline-block;
     text-align:left;
     position:relative;
+    overflow: hidden;
 }
 #fl-right {
     float:right;
     width: 250px;
     background: #A2B964;
-    font-family:Arial sans-serif;
+    font-family:"Arial", sans-serif;
     margin-left:10pt;
 
 }
@@ -118,9 +121,10 @@ p.nth-child(odd) {
     text-align:center;
 }
 #links {
-    position:absolute;
-    bottom:0;
-    right:0;
-
+    display: inline-block;
+    text-align: right;
+    vertical-align: bottom;
+    opacity: 0.5;
+        
 }
 
